syntax = "proto3";

package blockchain;

import "google/protobuf/any.proto";
import "mino/messages.proto";

message Conode {
    mino.Address address = 1;
    google.protobuf.Any publicKey = 2;
}
